creacion de formulario para la consulta de registro invima que me permitira modificar los datos para hacer un update la base de datos

--- a/src/styles/areas.css
+++ b/src/styles/areas.css
@@ -28,7 +28,7 @@
     border: 1px solid #ccc;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
     max-width: 300px;
-    z-index: 9999;
+    z-index: 9990;
     padding: 10px 40px;
     border-radius: 10px;
     /* Establece una altura máxima y activa el desplazamiento vertical */
@@ -79,7 +79,7 @@
     border: 1px solid #ccc;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
     max-width: 700px;
-    z-index: 9999;
+    z-index: 9990;
     padding: 20px 40px;
     border-radius: 10px;
     /* Establece una altura máxima y activa el desplazamiento vertical */
@@ -140,5 +140,24 @@
 .modal-content-consulta-button-close > button:hover{
     color: white;
     background-color: #4361ee;
+}
+
+/* CSS para los modales de las 4 consultas que se van a hacer*/ 
+
+.modalFormularioRegistrosInvima{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
+    max-width: 300px;
+    z-index: 9999;
+    padding: 10px 40px;
+    border-radius: 10px;
+    /* Establece una altura máxima y activa el desplazamiento vertical */
+    max-height: 400px; /* Ajusta esto según tus necesidades */
+    overflow-y: auto; /* Habilita el desplazamiento vertical si el contenido excede la altura máxima */
 }
 
