--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,8 +1,20 @@
 .homeContainer{
     width: 100%;
-    border: 1px solid red;
+    margin-top: 15px;
 }
 
 .homeTittle{
     text-align: center;
+    font-size: 38px;
+}
+
+.homeContainerImg{
+    width: 100%;
+    height: 500px;
+}
+
+.homeContainerImg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
