--- a/src/styles/areas.css
+++ b/src/styles/areas.css
@@ -152,12 +152,74 @@
     background-color: white;
     border: 1px solid #ccc;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
-    max-width: 300px;
+    min-width: 400px;
+    max-width: 600px;
     z-index: 9999;
     padding: 10px 40px;
     border-radius: 10px;
     /* Establece una altura máxima y activa el desplazamiento vertical */
-    max-height: 400px; /* Ajusta esto según tus necesidades */
+    max-height: 900px; /* Ajusta esto según tus necesidades */
     overflow-y: auto; /* Habilita el desplazamiento vertical si el contenido excede la altura máxima */
 }
+
+.modal-content-consultas-title{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modal-content-consultas-title{
+    font-size: 16px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+
+/* formulario.css */
+
+.form-container {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .form-group {
+    margin-bottom: 10px;
+  }
+  
+  .form-group label {
+    display: block;
+    font-weight: bold;
+  }
+  
+  .form-group input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .button-container {
+    text-align: center;
+  }
+  
+  .button-container button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .button-container button:hover {
+    background-color: #0056b3;
+  }
+  
 
