--- a/src/styles/areas.css
+++ b/src/styles/areas.css
@@ -239,3 +239,17 @@
     max-height: 700px; /* Ajusta esto según tus necesidades */
     overflow-y: auto; /* Habilita el desplazamiento vertical si el contenido excede la altura máxima */
 }
+
+.modalEventosCerrarEventosContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.modalEventosCerrarEventosContainer button{
+    padding: 6px 8px;
+    font-size: 16px;
+    border-radius: 5px;
+}
