--- a/src/styles/areas.css
+++ b/src/styles/areas.css
@@ -329,3 +329,25 @@
     font-size: 20px;
     font-weight: 600;
 }
+
+
+
+/*M css para modal de mantenimientos*/
+
+.modalMantenimientos {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
+    max-width: 700px;
+    z-index: 9990;
+    padding: 20px 40px;
+    border-radius: 10px;
+    /* Establece una altura máxima y activa el desplazamiento vertical */
+    max-height: 400px; /* Ajusta esto según tus necesidades */
+    min-height: 200px;
+    overflow-y: auto; /* Habilita el desplazamiento vertical si el contenido excede la altura máxima */
+}
