--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -74,19 +74,19 @@
 
 .cardRegister{
     margin-top: 5px;
-    padding: 10px, 20px;
+    padding: 10px 20px;
     background-color: #ededed;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.cardRegister > p{
+.cardRegister1 > p{
     font-size: 16px;
     font-weight: 600;
 }
 
-.cardRegister > button{
+.cardRegister1 > button{
     margin-top: 10px;
     font-size: 18px;
     font-weight: 600;
@@ -97,7 +97,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.8);
 }
 
-.cardRegister > button:hover{
+.cardRegister1 > button:hover{
     cursor: pointer;
     background-color: #7209b7;
 }
