--- a/src/styles/consultasAleatorias.css
+++ b/src/styles/consultasAleatorias.css
@@ -18,3 +18,87 @@
     background-color: #5B0888;
     color: white;
 }
+
+/*Estilos de la tabla de consultas aleatorias*/
+
+.mi-tabla {
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 20px; /* Espacio superior para separar de otros elementos */
+}
+
+.mi-tabla th, .mi-tabla td {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+.mi-tabla th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+
+.mi-tabla tr:hover {
+    background-color: #f5f5f5;
+}
+
+.mi-tabla button {
+    padding: 5px 10px;
+    cursor: pointer;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+}
+
+.mi-tabla button:hover {
+    background-color: #45a049;
+}
+
+
+/*Estilos para cada uno de los modales en donde va a estar la informacion de cada consulta*/
+
+.ConsultaAleatoriaModalInvima{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
+    max-width: 800px;
+    z-index: 9990;
+    padding: 20px 40px;
+    border-radius: 10px;
+    /* Establece una altura máxima y activa el desplazamiento vertical */
+    max-height: 700px; /* Ajusta esto según tus necesidades */
+    overflow-y: auto; /* Habilita el desplazamiento vertical si el contenido excede la altura máxima */
+}
+
+.cerrarModales{
+    position: fixed;
+    top: 94%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
+    max-width: 700px;
+    z-index: 9999;
+    border-radius: 6px;
+    /* Establece una altura máxima y activa el desplazamiento vertical */
+    max-height: 400px; /* Ajusta esto según tus necesidades */
+    overflow-y: auto; /* Habilita el desplazamiento vertical si el contenido excede la altura máxima */
+}
+
+
+.cerrarModales > button{
+    font-size: 16px;
+    font-weight: 600;
+    padding: 12px 18px;
+}
+
+.cerrarModales > button:hover{
+    color: white;
+    background-color: #007bff;
+}
